--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/nodemailer": "^6.4.4",
     "@types/uuidv4": "^5.0.0",
     "amqplib": "^0.8.0",
+    "dotenv": "^16.5.0",
     "express": "^4.17.1",
     "install": "^0.13.0",
     "nodemailer": "^6.6.3",
